--- a/WebServices/packages.config
+++ b/WebServices/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="4.3.1" targetFramework="net462" />
+  <package id="jQuery" version="3.4.1" targetFramework="net462" />
+  <package id="knockoutjs" version="3.5.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net462" />
@@ -10,4 +13,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
+  <package id="popper.js" version="1.14.0" targetFramework="net462" />
 </packages>
